# aurum

./: .gitignore  Home.py  README.md  aurum.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
models/: Aurum - PETR4.SA.sav  Aurum - PETZ3.SA.sav  Silver - ABEV3.SA.sav  Silver - CASH3.SA.sav  Silver - CMIG3.SA.sav  Silver - CSNA3.SA.sav  Silver - GGBR3.SA.sav  Silver - GGBR4.SA.sav  Silver - ITUB4.SA.sav  Silver - MGLU3.SA.sav  Silver - PETR4.SA.sav  Silver - PETZ.sav  Silver - PETZ3.SA.sav  Silver - TSLA.sav  Silver - USIM5.SA.sav  Silver - VALE3.SA.sav  Silver - WEGE3.SA.sav  Silver - XPBR31.SA.sav  basic_ABEV3.SA.sav  basic_BEEF3.SA.sav  basic_ENBR3.SA.sav  basic_GGBR3.SA.sav  basic_ITUB4.SA.sav  basic_MGLU3.SA.sav  basic_PETR4.SA.sav  basic_PETZ3.SA.sav  basic_TSLA.sav  basic_YDUQ3.SA.sav  model_PETR4.SA.sav  model_PETZ3.SA.sav  model_TSLA.sav  pipe_PETR4.SA.sav  pipe_PETZ3.SA.sav  pipe_TSLA.sav
notebooks/: JL01 - EDA.ipynb  VS00-Introduction.ipynb  VS01-EDA.ipynb  VS02-Modeling.ipynb  VS02-TreePruning.ipynb  VS03-TrainingPeriod.ipynb  VS04-WikiIndicators.ipynb  VS05-FeatureRenameTesting.ipynb  VS06-Wallet.ipynb  VS07-TreePlotWithPlotly.ipynb  VS08 - Model Performance.ipynb
notebooks/models/: Silver - PETR4.SA.sav
pages/: 02-Análise.py  02-Carteira.py  03-Análise.py  03-Carteira.py  03-Sobre.py  04-Sobre.py
src/data/: data.py
src/features/: ft.py
src/models/: model_training.py
src/utils/: utils.py
