[tool.poetry]
name = "aurum"
version = "0.1.0"
description = ""
authors = ["Vinicius Suguimoto <vinisuguimoto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.12"
pandas = "1.4.3"
yfinance = "0.1.74"
dtreeviz = "1.3.7"
ipykernel = "^6.17.1"
scikit-learn = "^1.1.3"
streamlit = "^1.14.0"
pandas-ta = "^0.3.14b0"
seaborn = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
